--- a/public/assets/css/components/cards.css
+++ b/public/assets/css/components/cards.css
@@ -1,3 +1,11 @@
+.container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 120px 32px 80px;
+    height: 100%;
+}
 .card {
     display: flex;
     flex-direction: column;
